[package]
name = "scrape-words"
version = "0.1.0"
authors = ["rookie1024 <rookie1286@gmail.com>"]

[dependencies]
base64 = "0.9.2"
error-chain = "0.12.0"
futures = "0.1.23"
http = "0.1.10"
hyper = "0.12.9"
hyper-tls = "0.3.0"
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.26"
tokio = "0.1.8"
url = "1.7.1"
